# termilink

./: .example-config.yaml  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md
termilink/: __init__.py  cli.py  config.py  models.py  note_handler.py
tests/: __init__.py  test_config.py  test_models.py  test_note_handler.py
